force-app/main/default/objects/Member_Branch__c/Member_Branch__c.object-meta.xml
<CustomObject>
    <label>Member Branch</label>
    <pluralLabel>Member Branches</pluralLabel>
    <nameField>
        <label>Branch Name</label>
        <type>Text</type>
    </nameField>
   <sharingModel>ControlledByParent</sharingModel>
</CustomObject>