force-app/main/default/objects/Member_Branch__c/fields/Member__c.field-meta.xml
<CustomField>
    <fullName>Member__c</fullName>
    <label>Member</label>
    
    <type>MasterDetail</type>
    <referenceTo>Member__c</referenceTo>
    <relationshipLabel>Member Branches</relationshipLabel>
    <relationshipName>Member_Branches</relationshipName>
</CustomField>