force-app/main/default/objects/Member_Branch__c/fields/Suspension_Date__c.field-meta.xml
<CustomField>
    <fullName>Suspension_Date__c</fullName>
    <label>Suspension Date</label>
    <type>Date</type>
</CustomField>