force-app/main/default/objects/Member_Branch__c/validationRules/Suspension_Date_Required_When_Suspended.validationRule-meta.xml
<ValidationRule>
    <fullName>Suspension_Date_Required_When_Suspended</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(Branch_Status__c, "Suspended"),
    ISBLANK(Suspension_Date__c)
)</errorConditionFormula>
    <errorMessage>Suspension Date is required when Branch Status is Suspended.</errorMessage>
    <errorDisplayField>Suspension_Date__c</errorDisplayField>
</ValidationRule>